# Management-ClientSide

./: README.md  index.html  pyproject.toml
fasthelm/core/: token_bucket.py
js/: app.js  dashboard.js
js /: app.js
js/auth/: session.js
js/user/: register.js  users.js
tests/: conftest.py  test_core.py  test_redis.py  test_storage.py
views/: dashboard.html  register.html
