[project]
name = "fast-helm"
version = "0.1.0"
description = ""
authors = [
    {name = "MaximoBerth0",email = "maximo1.berth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis (>=8.0.1,<9.0.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]